fix(table): prevent overflow menu clipping

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -60,3 +60,7 @@ html, body, #root {
 .cryostat-logo {
   height: 2em;
 }
+
+.recordings-table-drawer-content {
+  min-height: 23rem;
+}
